k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anvil
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: auth-sso-auth@kubernetescrd,auth-sso-errors@kubernetescrd
spec:
  rules:
    - host: '*.anvil.example.invalid'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anvil-router
                port:
                  name: http
